chore: checkpoint local work before pull