@@ -25,42 +25,36 @@ import java.util.function.Supplier;
 
 /**
  * Utility class for wrapping I/O-bound operations in virtual threads.
- * 
- * This class provides helper methods to easily execute synchronous operations
- * on virtual threads without boilerplate code. It's particularly useful for
- * one-off database operations or I/O calls that aren't part of a repository interface.
- * 
+ *
+ * This class provides helper methods to easily execute synchronous operations on virtual
+ * threads without boilerplate code. It's particularly useful for one-off database
+ * operations or I/O calls that aren't part of a repository interface.
+ *
  * Usage Examples:
- * 
- * // Execute a supplier on a virtual thread
- * Owner owner = VirtualThreadWrapper.execute(() -> ownerRepository.findById(1).orElse(null));
- * 
- * // Execute a function with input
- * List<Owner> owners = VirtualThreadWrapper.execute(
- *     (id) -> ownerRepository.findById(id).orElse(null),
- *     ownerId
- * );
- * 
+ *
+ * // Execute a supplier on a virtual thread Owner owner = VirtualThreadWrapper.execute(()
+ * -> ownerRepository.findById(1).orElse(null));
+ *
+ * // Execute a function with input List<Owner> owners = VirtualThreadWrapper.execute(
+ * (id) -> ownerRepository.findById(id).orElse(null), ownerId );
+ *
  * // Execute a consumer (fire-and-forget with virtual thread)
  * VirtualThreadWrapper.executeAsync(() -> database.log("User accessed owner list"));
- * 
- * Benefits:
- * - No platform thread exhaustion for I/O waits
- * - Cleaner code compared to explicit ExecutorService usage
- * - Automatic virtual thread lifecycle management
- * - Natural exception propagation
- * 
- * Thread Model:
- * - execute(Supplier) blocks the caller (synchronous)
- * - execute(Function, T) blocks the caller with input (synchronous)
- * - executeAsync(Runnable) returns immediately (asynchronous)
- * - All operations use virtual threads internally
- * 
+ *
+ * Benefits: - No platform thread exhaustion for I/O waits - Cleaner code compared to
+ * explicit ExecutorService usage - Automatic virtual thread lifecycle management -
+ * Natural exception propagation
+ *
+ * Thread Model: - execute(Supplier) blocks the caller (synchronous) - execute(Function,
+ * T) blocks the caller with input (synchronous) - executeAsync(Runnable) returns
+ * immediately (asynchronous) - All operations use virtual threads internally
+ *
  * @author Wick Dynex
  */
 public final class VirtualThreadWrapper {
 
-	private static final ExecutorService VIRTUAL_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
+	// Java 17 baseline: cached thread pool (virtual threads enabled on Java 21)
+	private static final ExecutorService VIRTUAL_EXECUTOR = Executors.newCachedThreadPool();
 
 	// Prevent instantiation
 	private VirtualThreadWrapper() {
@@ -68,10 +62,9 @@ public final class VirtualThreadWrapper {
 
 	/**
 	 * Executes a supplier on a virtual thread, blocking until completion.
-	 * 
-	 * This is the primary use case: wrap synchronous I/O operations like
-	 * database queries to run on virtual threads while maintaining blocking semantics.
-	 * 
+	 *
+	 * This is the primary use case: wrap synchronous I/O operations like database queries
+	 * to run on virtual threads while maintaining blocking semantics.
 	 * @param <T> the return type
 	 * @param supplier the operation to execute
 	 * @return the result of the supplier
@@ -80,22 +73,24 @@ public final class VirtualThreadWrapper {
 	public static <T> T execute(Supplier<T> supplier) {
 		try {
 			return VIRTUAL_EXECUTOR.submit(supplier::get).get();
-		} catch (ExecutionException ee) {
+		}
+		catch (ExecutionException ee) {
 			if (ee.getCause() instanceof RuntimeException rte) {
 				throw rte;
 			}
 			throw new RuntimeException("Virtual thread operation failed", ee.getCause());
-		} catch (InterruptedException ie) {
+		}
+		catch (InterruptedException ie) {
 			Thread.currentThread().interrupt();
 			throw new RuntimeException("Virtual thread operation interrupted", ie);
 		}
 	}
 
 	/**
-	 * Executes a function on a virtual thread with an input parameter, blocking until completion.
-	 * 
+	 * Executes a function on a virtual thread with an input parameter, blocking until
+	 * completion.
+	 *
 	 * Useful for operations that take a single parameter, like repository.findById(id).
-	 * 
 	 * @param <T> the input type
 	 * @param <R> the return type
 	 * @param function the operation to execute
@@ -106,12 +101,14 @@ public final class VirtualThreadWrapper {
 	public static <T, R> R execute(Function<T, R> function, T input) {
 		try {
 			return VIRTUAL_EXECUTOR.submit(() -> function.apply(input)).get();
-		} catch (ExecutionException ee) {
+		}
+		catch (ExecutionException ee) {
 			if (ee.getCause() instanceof RuntimeException rte) {
 				throw rte;
 			}
 			throw new RuntimeException("Virtual thread operation failed", ee.getCause());
-		} catch (InterruptedException ie) {
+		}
+		catch (InterruptedException ie) {
 			Thread.currentThread().interrupt();
 			throw new RuntimeException("Virtual thread operation interrupted", ie);
 		}
@@ -119,12 +116,11 @@ public final class VirtualThreadWrapper {
 
 	/**
 	 * Executes a runnable on a virtual thread asynchronously (fire-and-forget).
-	 * 
-	 * This method does NOT block. Use for non-critical background tasks like
-	 * logging, cache warming, or deferred cleanup operations.
-	 * 
+	 *
+	 * This method does NOT block. Use for non-critical background tasks like logging,
+	 * cache warming, or deferred cleanup operations.
+	 *
 	 * Note: Exceptions are swallowed. Consider logging in the runnable if needed.
-	 * 
 	 * @param runnable the operation to execute asynchronously
 	 */
 	public static void executeAsync(Runnable runnable) {
@@ -132,11 +128,11 @@ public final class VirtualThreadWrapper {
 	}
 
 	/**
-	 * Executes a consumer on a virtual thread with an input parameter, blocking until completion.
-	 * 
-	 * Useful for operations that accept input but don't return a value,
-	 * like database write operations.
-	 * 
+	 * Executes a consumer on a virtual thread with an input parameter, blocking until
+	 * completion.
+	 *
+	 * Useful for operations that accept input but don't return a value, like database
+	 * write operations.
 	 * @param <T> the input type
 	 * @param consumer the operation to execute
 	 * @param input the input parameter
@@ -148,12 +144,14 @@ public final class VirtualThreadWrapper {
 				consumer.accept(input);
 				return null;
 			}).get();
-		} catch (ExecutionException ee) {
+		}
+		catch (ExecutionException ee) {
 			if (ee.getCause() instanceof RuntimeException rte) {
 				throw rte;
 			}
 			throw new RuntimeException("Virtual thread operation failed", ee.getCause());
-		} catch (InterruptedException ie) {
+		}
+		catch (InterruptedException ie) {
 			Thread.currentThread().interrupt();
 			throw new RuntimeException("Virtual thread operation interrupted", ie);
 		}
@@ -161,10 +159,9 @@ public final class VirtualThreadWrapper {
 
 	/**
 	 * Executes a callable on a virtual thread, blocking until completion.
-	 * 
-	 * This is the most flexible method, supporting any operation including
-	 * those that throw checked exceptions.
-	 * 
+	 *
+	 * This is the most flexible method, supporting any operation including those that
+	 * throw checked exceptions.
 	 * @param <T> the return type
 	 * @param callable the operation to execute
 	 * @return the result of the callable
@@ -173,12 +170,14 @@ public final class VirtualThreadWrapper {
 	public static <T> T execute(Callable<T> callable) {
 		try {
 			return VIRTUAL_EXECUTOR.submit(callable).get();
-		} catch (ExecutionException ee) {
+		}
+		catch (ExecutionException ee) {
 			if (ee.getCause() instanceof RuntimeException rte) {
 				throw rte;
 			}
 			throw new RuntimeException("Virtual thread operation failed", ee.getCause());
-		} catch (InterruptedException ie) {
+		}
+		catch (InterruptedException ie) {
 			Thread.currentThread().interrupt();
 			throw new RuntimeException("Virtual thread operation interrupted", ie);
 		}
